--- a/client/index.html
+++ b/client/index.html
@@ -21,18 +21,13 @@ a {
   
 a:hover { text-decoration:underline; }
   
-#wrapper, #loginform{
+#wrapper{
 margin:0 auto;
 padding-bottom:25px;
 background:#EBF4FB;
 width:504px;
 border:1px solid #ACD8F0; }
 
-  
-#loginform { padding-top:18px; }
-  
-    #loginform p { margin: 5px; }
-  
 #chatbox {
     text-align:left;
     margin:0 auto;
@@ -44,22 +39,11 @@ border:1px solid #ACD8F0; }
     border:1px solid #ACD8F0;
     overflow:auto; }
   
-#usermsg {
-    width:395px;
-    border:1px solid #ACD8F0; }
-  
 #submit { width: 60px; }
-  
-.error { color: #ff0000; }
   
 #menu { padding:12.5px 25px 12.5px 25px; }
   
-.welcome { float:left; }
-  
-.logout { float:right; }
-  
 .msgln { margin:0 0 2px 0; }
-
 
 #message-div{
     display: none;
@@ -91,9 +75,6 @@ border:1px solid #ACD8F0; }
             <div style="clear:both"></div>
         </div>
 
-
-
-         
         <div id="chatbox">
             <!-- <div class='msgln'></div> -->
         </div>
@@ -105,17 +86,11 @@ border:1px solid #ACD8F0; }
         </form>
     </div>
 
-
     <div id="wrapper">
         Who's Online ?
         <p id="userlist"></p>
     </div>
-
-
-
 </div>
-
-
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
