--- a/client/index.html
+++ b/client/index.html
@@ -1,55 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-<style>
-    /* CSS Document */
-body {
-    font:12px arial;
-    color: #222;
-    text-align:center;
-    padding:35px; }
-  
-form, p, span {
-    margin:0;
-    padding:0; }
-  
-input { font:12px arial; }
-  
-a {
-    color:#0000FF;
-    text-decoration:none; }
-  
-a:hover { text-decoration:underline; }
-  
-#wrapper{
-margin:0 auto;
-padding-bottom:25px;
-background:#EBF4FB;
-width:504px;
-border:1px solid #ACD8F0; }
-
-#chatbox {
-    text-align:left;
-    margin:0 auto;
-    margin-bottom:25px;
-    padding:10px;
-    background:#fff;
-    height:270px;
-    width:430px;
-    border:1px solid #ACD8F0;
-    overflow:auto; }
-  
-#submit { width: 60px; }
-  
-#menu { padding:12.5px 25px 12.5px 25px; }
-  
-.msgln { margin:0 0 2px 0; }
-
-#message-div{
-    display: none;
-}
-
-</style>
+<link type="text/css" rel="stylesheet" href="style.css" />
 <head>
 <title>Sembang</title>
 </head>
